Fix layout issues

--- a/src/assets/scss/objects/_course-list.scss
+++ b/src/assets/scss/objects/_course-list.scss
@@ -1,4 +1,5 @@
 .course-list {
+  background-color: #ffffff;
   &__container {
     padding-left: 0;
     padding-right: 0;
